2005-08-07  Stepan Kasal  <kasal@ucw.cz>

	* lib/am/texinfos.am (uninstall-info-am): Call install-info only if
	the $(infodir) exists.

2005-07-31  Stepan Kasal  <kasal@ucw.cz>

	* tests/library3.test: Fix a typo which made the test fail.

2005-07-27  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Linking, Program and Library Variables):
	Suggest reserving -l for third-party libraries.

	* lib/Automake/Variable.pm (require_variables): Mention aclocal's
	search path when suggesting to add a macro in configure.ac.
	People are confused when Automake suggests adding a macro (such as
	AC_PROG_LIBTOOL) that is already in configure.ac.
	* automake.in (require_file_internal): Suggest `automake --add-missing'
	for missing files that can be installed.
	* tests/library3.test: Adjust.

2005-07-27  Stepan Kasal  <kasal@ucw.cz>

	* tests/defs.in: When required matches both `*libtool*' and
	`*gettext*', check for both m4 files.

	* doc/automake.texi (Auxiliary Programs): Fix a typo.
	* tests/suffix11.test: Fix a typo.
	* tests/colon3.test: s/EGREP/FGREP/.

2005-07-19  Paul Eggert  <eggert@cs.ucla.edu>

	* tests/instspc.test: Major rewrite to test for many other
	problematic file names, e.g., '$', '"', '('.  Automake and
	Autoconf can't handle many of them, so do not report a failure
	if the usual candidates show up.

2005-07-19  Stepan Kasal  <kasal@ucw.cz>

	* Makefile.am (automake, aclocal): Merge the rules.

2005-07-10  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/config.guess, lib/config.sub, lib/texinfo.tex: New upstream
	versions.

2005-07-09  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/install-sh: Use IFS=/ to split directories on /, don't translate
	/ into % as it prevents directory names using %...

2005-07-09  Stepan Kasal  <kasal@ucw.cz>

	* doc/automake.texi (Public macros): Typo.
	* aclocal.in: Typo in comment.

2005-07-09  Zack Weinberg  <zack@codesourcery.com>  (tiny change)

	* lib/depcomp: Handle "#line" markers as well as "# " markers in