@@ -1,3 +1,8 @@
+2005-08-07  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* m4/mkdirp.m4: Update misleading comment about `mkdir -p .'.
+	Prompted by Stepan Kasal.
+
 2005-08-07  Stepan Kasal  <kasal@ucw.cz>
 
 	* lib/am/texinfos.am (uninstall-info-am): Call install-info only if
